--- a/louise-brigham/index.html
+++ b/louise-brigham/index.html
@@ -12,14 +12,8 @@
 </div>
 <body>
     <main>
-        <div class="containerimg">
-<div class="img">
-    <img src="/assets/img/CharlottePerriand/Charlotte_Perriand_Janvier_1991.jpg" alt="Beispielbild" class="hidden-image"></div>
-  <div class="imgcredit">credit: robert doisneau,
-  <br> via Wikipedia</div>
-  <a href="../charlotte-perriand.html"><div class="button">more</div></a>
-</div>
-
+        <body><h1> HELLO</h1>
+</body>
     </main>
 </body>
 </html>
