--- a/links/index.html
+++ b/links/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Links</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="/assets/css/fonts.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap">
+	<title>Fill the gap</title>
+    <script src="script.js" defer></script>
 </head>
+</div>
 <body>
-    <h1>Links</h1>
-    <p>Dies ist die Links-Seite.</p>
+    <main>
+        <body><h1> Links</h1>
+</body>
+    </main>
 </body>
 </html>
