--- a/louise-brigham/index.html
+++ b/louise-brigham/index.html
@@ -12,7 +12,19 @@
 </div>
 <body>
     <main>
-        <body><h1> HELLO</h1>
+        <body>
+<div class="navigation">
+    <a href="/index/"><div class="button">home</div></a>
+    <div class="button">←</div>
+    <div class="navi-items"><h2>louise brigham</h2></div>
+    <div class="button">→</div>
+</div>
+<div class="random-gallery">
+<div class="gallery-item" position="top: 50px; left: 150px;">
+      <img src="/assets/img/LouiseBrigham/Box_Furniture_wiki.jpg" alt="Platzhalterbild">
+      <div class="gallery-item" position="top: 200px; left: 300px;">
+      <iframe src="https://archive.org/embed/boxfurniture00brig" width="200" height="400" overflow-x="hidden" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
+<script src="script.js"></script>
 </body>
     </main>
 </body>
