--- a/louise-brigham/index.html
+++ b/louise-brigham/index.html
@@ -14,7 +14,7 @@
     <main>
         <body>
 <div class="navigation">
-    <a href="/index/"><div class="button">home</div></a>
+    <a href="https://ask-a-friend.github.io"><div class="button">home</div></a>
     <div class="button">←</div>
     <div class="navi-items"><h2>louise brigham</h2>
     <p>The interweaving of aesthetic, social, educational, and domestic reform that Brigham achieved with Box Furniture activated the Arts and Crafts Movement’s call for democratic design. Brigham offered socially, politically, and materially marginalized people the opportunity to create beautiful, useful, and affordable objects; to find fulfillment through handwork; and to craft for themselves a sense of comfort, place, and belonging. She helped to widen the pathway into this movement by reframing the everyday, working-class practices of “making do” and “junk collecting” in newly beneficial and aestheticized terms. The thoughtfully designed craft of the Arts and Crafts Movement placed these furnishings out of reach of all but the wealthiest citizens, but Box Furniture brought handcraft to an affordable and accessible level. <a href="https://decorativeartstrust.org/box-furniture-article">read the article</a></p></div>
