new color way, an round shapes

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <body>
     <div class="aboutbox">
         <h4>about</h4></div>
-        <div class="linkbox">
-            <a href="/links/"><h4>links</h4></a>
+    <div class="linkbox">
+      <a href="/links/"><h4>links</h4></a>
         </div> 
     <div class="grandparent">
         <div class="title1">Fill</div>
@@ -152,15 +152,12 @@
     <div class="parent">
     <div class="child-container1"> 
         <div class="hidden-child">
-        <h6>Upcycling in 1909</h6>
        </div>
     </div>
         <div class="child-container2"><div class="hidden-child">
         
         <h2>Louise Brigham</h2>
         <h3>Pionierin von Nutzung von <br> recycelten Materialien in Möbeldesign</h3>
-        <h3>01.01.1875–30.03.1956</h3>
-        <h3>from North America</h3>
         <p><div class="containerimg">
 <div class="img">
     <img src="/assets/img/LouiseBrigham/LouiseBrighamportraitwiki.jpeg" alt="Beispielbild" class="hidden-image"></div>
@@ -179,9 +176,7 @@
         <div class="hidden-child">
         <h2>
                 <h2>Charlotte Perriand</h2>
-                <h3>vereint Funktionalität, Ästhetik und soziale Verantwortung</h3>
-                <h3>24.10.1903–27.10.1999</h3>
-                <h3>from Paris</h3>
+                <h3>vereint Funktionalität, Ästhetik <br> und soziale Verantwortung</h3>
                 <p><div class="containerimg">
 <div class="img">
     <img src="/assets/img/CharlottePerriand/Charlotte_Perriand_Janvier_1991.jpg" alt="Beispielbild" class="hidden-image"></div>
