Index responsive try 1

--- a/louise-brigham/index.html
+++ b/louise-brigham/index.html
@@ -7,29 +7,67 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap">
 	<title>Fill the gap</title>
-    <script src="script.js" defer></script>
+    <script src="/_includes/script.js"></script>
 </head>
 </div>
 <body>
     <main>
         <body>
+<script src="script.js"></script>
 <div class="navigation">
-    <a href="https://ask-a-friend.github.io"><div class="button">home</div></a>
+    <a href="/index.html"><div class="button">home</div></a>
     <div class="button">←</div>
-    <div class="navi-items"><h2>louise brigham</h2>
-    <p>The interweaving of aesthetic, social, educational, and domestic reform that Brigham achieved with Box Furniture activated the Arts and Crafts Movement’s call for democratic design. Brigham offered socially, politically, and materially marginalized people the opportunity to create beautiful, useful, and affordable objects; to find fulfillment through handwork; and to craft for themselves a sense of comfort, place, and belonging. She helped to widen the pathway into this movement by reframing the everyday, working-class practices of “making do” and “junk collecting” in newly beneficial and aestheticized terms. The thoughtfully designed craft of the Arts and Crafts Movement placed these furnishings out of reach of all but the wealthiest citizens, but Box Furniture brought handcraft to an affordable and accessible level. <a href="https://decorativeartstrust.org/box-furniture-article">read the article</a></p></div>
+    <div class="navi-items"></div>
     <div class="button">→</div>
-</div>
-<div class="random-gallery">
-      <div class="gallery-item">
-      <img src="/assets/img/LouiseBrigham/Box_Furniture_wiki.jpg" alt="Platzhalterbild"></div>
-      <div class="gallery-item">
-      <iframe src="https://archive.org/embed/boxfurniture00brig" width="200" height="400" overflow-x="hidden" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe></div>
-      <div class="gallery-item">
-      <img src="/assets/img/LouiseBrigham/Box_Furniture_wiki.jpg" alt="Platzhalterbild">
-      <div class="gallery-item">
-      <img src="/assets/img/LouiseBrigham/Child’s Box Furniture Room in the Child Welfare Exhibit, CourtesyWinterhurLibrary.jpg" alt="Platzhalterbild"></div>
-</div>
+    </div>
+   <div class="grid-container">
+        <div class="grid-item">
+            <div class="date">01.01.2025</div>
+            <img src="/assets/img/LouiseBrigham/Box_Furniture_wiki.jpg" alt="Bild 1" alt="Placeholder Image" class="inline-image">
+  <p>
+    Suspendisse potenti. In hac habitasse platea dictumst. Vestibulum at nisi tincidunt, malesuada erat id,
+    malesuada felis. Nunc dictum orci quis sem sagittis vehicula. Aenean accumsan sapien a nunc tristique
+    pellentesque. Etiam posuere, neque sed ultrices faucibus, ligula ligula tincidunt nisl, nec tincidunt
+    quam augue nec mauris.
+  </p>
+ </div>
+        <div class="grid-item">
+            <div class="date">02.01.2025</div>
+            <img src="https://via.placeholder.com/150" alt="Bild 2">
+        </div>
+        <div class="grid-item">
+            <div class="date">03.01.2025</div>
+            <img src="https://via.placeholder.com/150" alt="Bild 3">
+        </div>
+        <div class="grid-item">
+            <div class="date">04.01.2025</div>
+            <img src="https://via.placeholder.com/150" alt="Bild 4">
+        </div>
+        <div class="grid-item">
+            <div class="date">05.01.2025</div>
+            <img src="https://via.placeholder.com/150" alt="Bild 5">
+        </div>
+        <div class="grid-item">
+            <div class="date">06.01.2025</div>
+            <img src="https://via.placeholder.com/150" alt="Bild 6">
+        </div>
+        <div class="grid-item">
+            <div class="date">07.01.2025</div>
+            <img src="https://via.placeholder.com/150" alt="Bild 7">
+        </div>
+        <div class="grid-item">
+            <div class="date">08.01.2025</div>
+            <img src="https://via.placeholder.com/150" alt="Bild 8">
+        </div>
+        <div class="grid-item">
+            <div class="date">09.01.2025</div>
+            <img src="https://via.placeholder.com/150" alt="Bild 9">
+        </div>
+        <div class="grid-item">
+            <div class="date">10.01.2025</div>
+            <img src="https://via.placeholder.com/150" alt="Bild 10">
+        </div>
+    </div>
 </body>
     </main>
 </body>
