form änderung button

--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
         <div class="child-container2"><div class="hidden-child">
         
         <h2>Louise Brigham</h2>
-        <h3>Pionierin von Nutzung von <br> recycelten Materialien in Möbeldesign</h3>
+        <h3>recycelt Materialien <br> um Möbel zu bauen</h3>
         <p><div class="containerimg">
 <div class="img">
     <img src="/assets/img/LouiseBrigham/LouiseBrighamportraitwiki.jpeg" alt="Beispielbild" class="hidden-image"></div>
-  <div class="imgcredit">credit: Public domain,
-  <br> via Wikimedia Commons</div>
+  <div class="imgcredit"><div class="hidden-child">credit: Public domain,
+  <br> via Wikimedia Commons</div></div>
   <a href="/louise-brigham/"><div class="button">more</div></a>
 </div>
 </p>
