--- a/louise-brigham/index.html
+++ b/louise-brigham/index.html
@@ -1,103 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/assets/css/fonts.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Louise Brigham</title>
+    <link rel="stylesheet" href="/assets/css/fonts.css">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap">
-	<title>Fill the gap</title>
-    <script src="/_includes/script.js"></script>
+    <script src="/assets/js/script.js"></script>
 </head>
-</div>
 <body>
+    <header>
+    </header>
     <main>
-        <head></head>
-<body>
-<style>
-.grandparent {
-    background-color: rgb(60, 40, 244);
-    border: 2px solid rgb(60, 40, 244);
-    width: 90vw;
-    height: 100vh;
-    margin: 10px;
-    line-height: 50px;
-    overflow: auto;
-    transform: rotate(0deg);
-    }
-    .puzzle-grid {
-            display: grid;
-            grid-template-columns: repeat(6, 15vw);
-            grid-auto-rows: 25vh;
-            gap: 0px;
-            margin: 0px;
-        }
-.puzzle-cell {
-            width: 15vw;
-            height: 25vh;
-            border: 2px solid rgb(60, 40, 244);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: azure;
-            position: relative;
-            border-radius: 15px 0px 0px 0px;
-        }
-.puzzle-cell.hidden-cell {
-            background-color: rgb(60, 40, 244);
-            border-radius: 0px 0px 0px 0px;
-        }
-.puzzle-letter {
-            font-size: 2rem;
-            font-family: "OffBitTrial-101";
-            color: rgb(60, 40, 244);
-            font-weight: bold;
-            color: transparent;
-            opacity: 1;
-            animation: fadeOut 2s;
-        }
-.puzzle-cell:hover .puzzle-letter {
-            color: rgb(60, 40, 244);
-            animation: fadeOut 2s;
-        }
-</style>
-<div class="grandparent">
-<div class="puzzle-grid">
-<!-- Zwischenzeile -->
- <div class="puzzle-cell hidden-cell"></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">L</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">O</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">U</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">I</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">S</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">E</span></div>
-<!-- Zeile 5 -->
-<div class="puzzle-cell hidden-cell"></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">L</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">O</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">U</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">I</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">S</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">E</span></div>
-<!-- Zeile 6 -->
-<div class="puzzle-cell hidden-cell"></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">L</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">O</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">U</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">I</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">S</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">E</span></div>
-<!-- Zwischenzeile -->
- <div class="puzzle-cell hidden-cell"></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">L</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">O</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">U</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">I</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">S</span></div>
-    <div class="puzzle-cell"><span class="puzzle-letter">E</span></div>
+        <p>(<div class="bookcontainer"></p>
+<div class="bookleft">)
+  <p>Louise Brigham was an American early-20th-century designer and teacher. She was a pioneering champion of the use of recycled materials in furniture design. A system she invented for building furniture out of packing crates represents one of the earliest to adopt a modular approach to the design of individual units - Wikipedia"</p>
+  <a href="/archive/"><div class="button">more</div></a>
 </div>
+(<div class="bookright">)
+<div class="img">
+    <img src="/assets/img/LouiseBrigham/LouiseBrighamportraitwiki.jpeg" alt="Beispielbild" class="hidden-image"></div>
+  <div class="imgcredit"><div class="hidden-child">credit: Public domain,
+  <br>via Wikimedia Commons</div>
+  (</div>)
 </div>
-</body>
     </main>
+    <footer>
+    
+    </footer>
 </body>
 </html>
