--- a/charlotte-perriand-post/index.html
+++ b/charlotte-perriand-post/index.html
@@ -13,19 +13,8 @@
     <header>
     </header>
     <main>
-        <div class="bookcontainer">
-        <div class="bookleft">
-          <p> <p> HALLOOOOO!! </p>
- </p>
-          <a href=""><div class="button">more</div></a>
-        </div>
-        <div class="bookright">
-        <div class="img">
-            <img src="/assets/img/CharlottePerriand/Charlotte_Perriand_Janvier_1991.jpg" alt="Beispielbild" class="hidden-image"></div>
-          <div class="imgcredit"><div class="hidden-child">credit: Public domain,
-          <br>via Wikimedia Commons</div>
-          </div>
-        </div>
+        <p>hallo</p>
+
     </main>
     <footer>
     
