--- a/marianne-brandt/index.html
+++ b/marianne-brandt/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charlotte Perriand</title>
+    <title>Marianne Brandt</title>
     <link rel="stylesheet" href="/assets/css/fonts.css">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap">
@@ -13,19 +13,8 @@
     <header>
     </header>
     <main>
-        <div class="bookcontainer">
-        <div class="bookleft">
-          <p> <p> HALLOOOOO!! </p>
- </p>
-          <a href=""><div class="button">more</div></a>
-        </div>
-        <div class="bookright">
-        <div class="img">
-            <img src="/assets/img/CharlottePerriand/Charlotte_Perriand_Janvier_1991.jpg" alt="Beispielbild" class="hidden-image"></div>
-          <div class="imgcredit"><div class="hidden-child">credit: Public domain,
-          <br>via Wikimedia Commons</div>
-          </div>
-        </div>
+        <p>hallo</p>
+
     </main>
     <footer>
     
