--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
         
 <body>
 <div class="grandparent">
-        <div class="title1">Fill</div>
-        <div class="title2">the</div>
-        <div class="title3">gap</div>
+        <div class="title1">Fill _ _ _ GAP </div>
+       
 
   <div class="parent"> 
       <div class="crossword">
@@ -71,11 +70,15 @@
     <div class="aboutbox-dropdown">
         <div class="abouttypo">about</div>
         <div class="aboutbox-dropdown-content">
+        <h3>fillthegap:</h3>
         <p>Mit meinem Projekt möchte ich auf „female positions“ im gestalterischem Raum aufmerksam machen, 
         die in einem auch heutzutage immer noch männlich dominierten Feld bislang noch nicht ausreichend gezeigt wurden. 
         Das Projekt hat nicht den Anspruch ausschließlich Personen zu präsentieren, die noch vollkommen unbekannt sind, 
         sondern soll ein Angebot sein es als Archiv oder mögliches Recherche-Tool zu nutzen. Nebst einer von mir angelegten 
-        Basis eigens kuratierter Personen zum Verständnis des Portals soll es dauerhaft dazu einladen eigene Einträge einzureichen. </p>
+        Basis eigens kuratierter Personen zum Verständnis des Portals soll es dauerhaft dazu einladen eigene Einträge einzureichen.
+        <a href="mailto:marbach.evelyn@gmail.com?subject=Fill the Gap: Einsendung&body=Hier müssen noch die Anforderungen definiert werden.%0A%0AMit%20sonnigen%20Grüßen,">
+        <div class="button">E-Mail senden</div></a>
+</p>
         </div>
         <svg id="Ebene_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 862 453">
                 <defs><style>.cls-1{fill:none;stroke:var(--color-2);;stroke-miterlimit:10;stroke-width:7px;}</style></defs>
