--- a/barbara-stauffacher-solomon/index.html
+++ b/barbara-stauffacher-solomon/index.html
@@ -11,18 +11,22 @@
 </head>
 <body>
     <header>
+      <a href="/index.html">
+        <div class="button">start</div></a>
+        <a href="/archive/">
+          <div class="button">archiv</div></a>
     </header>
     <main>
         <div class="bookcontainer">
         <div class="bookleft">
-          <h3>Barbara Stauffacher Solomon</h3>
-          <h3> </h3>
+          <h3></h3>
+          <h3>XX </h3>
           
          <div class="discipline">
           <a href="/archive/">
-            <div class="button"></div></a> 
+            <div class="button">furniture design</div></a> 
             <a href="/social-design/">
-            <div class="button"></div></a>
+            <div class="button">social design</div></a>
           </div>
           <p></p>
           <p><p>hallo</p>
