--- a/charlotte-perriand/index.html
+++ b/charlotte-perriand/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charlotte <br> Perriand</title>
+    <title>Charlotte Perriand</title>
     <link rel="stylesheet" href="/assets/css/fonts.css">
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap">
@@ -11,18 +11,22 @@
 </head>
 <body>
     <header>
+      <a href="/index.html">
+        <div class="button">start</div></a>
+        <a href="/archive/">
+          <div class="button">archiv</div></a>
     </header>
     <main>
         <div class="bookcontainer">
         <div class="bookleft">
-          <h3>Charlotte <br> Perriand</h3>
+          <h3></h3>
           <h3>1903–1999 </h3>
           
          <div class="discipline">
           <a href="/archive/">
-            <div class="button"></div></a> 
+            <div class="button">furniture design</div></a> 
             <a href="/social-design/">
-            <div class="button"></div></a>
+            <div class="button">social design</div></a>
           </div>
           <p></p>
           <p><div class="editorial4">
