--- a/post-14/index.html
+++ b/post-14/index.html
@@ -11,11 +11,15 @@
 </head>
 <body>
     <header>
+      <a href="/index.html">
+        <div class="button">start</div></a>
+        <a href="/archive/">
+          <div class="button">archiv</div></a>
     </header>
     <main>
         <div class="bookcontainer">
         <div class="bookleft">
-          <h3>Charlotte Perriand</h3>
+          <h3></h3>
           <h3> </h3>
           
          <div class="discipline">
