--- a/charlotte-perriand/index.html
+++ b/charlotte-perriand/index.html
@@ -47,7 +47,7 @@
 
         </div>
         <div class="img" style="position: absolute; top: 80px; right: 46%">
-          <img src="/assets/img/CharlottePerriand/Charlotte_Perriand_Janvier_1991.jpg" alt="Beispielbild" class="hidden-image"></div>
+          <img src="/assets/img/CharlottePerriand/Charlotte_Perriand_Janvier_1991.jpg" width="200px" mix-blend-mode="multiply" alt="Beispielbild" class="hidden-image"></div>
         <div class="imgcredit"><div class="hidden-child">credit: Public domain,
         <br>via Wikimedia Commons</div>
         </div>
