--- a/eileen-gray/index.html
+++ b/eileen-gray/index.html
@@ -45,7 +45,7 @@
 
         </div>
         <div class="img" style="position: absolute; top: 80px; right: 46%">
-          <img src="/assets/img/Eileen Grey/Eileen_Gray_wikipedia.jpg" alt="Beispielbild" class="hidden-image"></div>
+          <img src="/assets/img/Eileen Grey/Eileen_Gray_wikipedia.jpg" width="200px" mix-blend-mode="multiply" alt="Beispielbild" class="hidden-image"></div>
         <div class="imgcredit"><div class="hidden-child">credit: Public domain,
         <br>via Wikimedia Commons</div>
         </div>
