--- a/gunta-stölzl/index.html
+++ b/gunta-stölzl/index.html
@@ -41,7 +41,7 @@
 
         </div>
         <div class="img" style="position: absolute; top: 80px; right: 46%">
-          <img src="" alt="Beispielbild" class="hidden-image"></div>
+          <img src="" width="200px" mix-blend-mode="multiply" alt="Beispielbild" class="hidden-image"></div>
         <div class="imgcredit"><div class="hidden-child">credit: Public domain,
         <br>via Wikimedia Commons</div>
         </div>
